# mypytools

./: .gitIgnore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  USAGE.md  pyproject.toml  setup.py
.github/workflows/: bump.yml  ci.yml  release.yml
docs/: DEV.md  INSTALL.md  SUPPORTED.md  USAGE.md
scripts/: dev_deps.py
src/mypytools/: __init__.py
src/mypytools/ansi_tools/: __init__.py  formatter.py  style_builder.py
src/mypytools/flattener/: __init__.py  _list.c  _list.cpp  _list.pyi  list.py  list_filter.py
src/mypytools/log/: __init__.py  log.py
src/mytools/: __init__.py
src/mytools/ansi_tools/: __init__.py  formatter.py  style_builder.py
src/mytools/flattener/: __init__.py  list.py
src/mytools/log/: __init__.py  log.py
tests/: test_ansi_tools.py  test_flattener.py  test_log.py
