[build-system]
requires = ["setuptools>=82", "setuptools-scm>=9"]
build-backend = "setuptools.build_meta"


#--{ Project }-----------------------------------------------------------------

[project]
name = "mytools"
dependencies = []
dynamic = ["version"]
description = "Collection of utility tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Evan Reumann", email = "evanrileyreumann@gmail.com"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1"]


#--{ Setuptools-Package(s) }---------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mytools = ["py.typed"]


[tool.setuptools_scm]


#--{ Pytest }------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

#--{ Mypy }--------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true

#--{ Ruff }--------------------------------------------------------------------

[tool.ruff]
line-length = 80

extend-exclude = ["tests"]
force-exclude = true


[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

docstring-code-format = true
docstring-code-line-length = 35
