[build-system]
requires = ["setuptools>=82", "setuptools-scm>=9", "wheel"]
build-backend = "setuptools.build_meta"


#——{ Project }—————————————————————————————————————————————————————————————————

[project]
name = "mytools"
dependencies = []
dynamic = ["version"]
description = "Collection of utility tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Evan Reumann", email = "evanrileyreumann@gmail.com"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "isort>=5.0,<6",
    "mypy>=1.0,<2",
    "ruff>=0.1,<0.2",
    "pre-commit>=3.0,<4",
    "pytest>=7.0,<8",
    "setuptools>=82,<83",
    "wheel",
]


#——{ Setuptools-Package(s) }———————————————————————————————————————————————————

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mytools = ["py.typed"]
"mytools.flattener" = ["*.pyi"]


[tool.setuptools_scm]


#——{ Pytest }——————————————————————————————————————————————————————————————————

[tool.pytest.ini_options]
testpaths = ["tests"]

#——{ Mypy }————————————————————————————————————————————————————————————————————

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

#——{ Ruff }————————————————————————————————————————————————————————————————————

[tool.ruff]
line-length = 80
target-version = "py311" # <-- Tells pyupgrade which version of Python features it can force

extend-exclude = ["tests"]
force-exclude = true

#——{ Formatting }——————————————————————
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

docstring-code-format = true
docstring-code-line-length = "dynamic"

#——{ Linting & Rules}——————————————————
[tool.ruff.lint]
task-tags = ["TODO", "FIXME", "TASK"]

select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings (Enables W505 max-doc-length rule)
    "F",    # Pyflakes (basic syntax & variable errors)
    "B",    # flake8-bugbear (catches subtle design bugs and logic flaws)
    "N",    # pep8-naming (enforces camelCase for classes, snake_case for functions)
    "UP",   # pyupgrade (forces modern Python syntax upgrades automatically)
    "D",    # pydocstyle (STRICT docstring style checking)
    "SIM",  # flake8-simplify (suggests simpler, cleaner wys to write logic)
    "C4",   # flake8-comprehensions (optimizes dict/list/set comprehensions)
    "RUF",  # Ruff-specific rules
]

ignore = [
    "D212" # Multiline summaries start after the opening quotes
]


[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 80


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
split-on-trailing-comma = false

known-first-party = ["mytools"]
known-local-folder = ["src"]


#——{ isort }———————————————————————————————————————————————————————————————————

[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["mytools"]
known_local_folder = ["src"]
combine_as_imports = true

import_heading_future = "Future imports"
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Project imports"
import_heading_localfolder = "Relative imports"
